Fine tuing slides

--- a/Weekly Data Science Project Initiative.ipynb
+++ b/Weekly Data Science Project Initiative.ipynb
@@ -208,7 +208,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### 데이터 수집 - 전처리 - 분석 - 시각화를 일주일 안에 해보자"
    ]
